# sgetris

./: CMakeLists.txt  diff_clock.cpp  diff_clock.hpp  exception.cpp  exception.hpp  explode.hpp  iterator_picker.hpp  iterator_picker_impl.hpp  level.hpp  level_up_callback.hpp  log_switcher.cpp  log_switcher.hpp  machine.cpp  machine.hpp  main.cpp  media_path.cpp  media_path.hpp  point.hpp  program_options.cpp  read_lines.hpp  real.hpp  real_point.hpp  rectangle_aligner.hpp  rectangle_aligner_impl.hpp  sound_manager.cpp  sound_manager.hpp  texture_manager.cpp  texture_manager.hpp  texture_manager_fwd.hpp  time_delta.hpp
backgrounds/: base.hpp  flake.cpp  flake.hpp  flakes.cpp  flakes.hpp
backgrounds/flakes/: flake.cpp  flake.hpp  object.cpp  object.hpp
events/: tick.cpp  tick.hpp
game_logics/: base.hpp  standard.cpp  standard.hpp
layouter/: alignment.hpp  object.cpp  object.hpp
log/: context.cpp  context.hpp  object.cpp  object.hpp
media/: sounds.ini  stones.txt  textures.ini
media/backgrounds/flakes/: textures.ini
media/stones/: standard.txt
objects/: base.hpp  base_fwd.hpp  block.hpp  running.cpp  sprite_block.cpp  sprite_block.hpp  weak_ptr.hpp
parser/: parse_file.cpp  parse_file.hpp  parse_stream.cpp  parse_stream.hpp  stone_sequence.hpp  stone_template.hpp
sprite/: choices.hpp  color.hpp  rect.hpp
src/: clock.hpp  diff_clock.hpp  diff_timer.hpp  iterator_picker_impl.hpp  level_up_callback_fn.hpp  log_switcher.cpp  log_switcher.hpp  longest_element.hpp  program_options.hpp  read_lines.cpp  real_point.hpp  rectangle_aligner.hpp  score.hpp  sound_manager.cpp  texture_manager.cpp  texture_manager.hpp  time_delta.hpp  timer.hpp
src/backgrounds/: base.cpp  base.hpp
src/backgrounds/flakes/: flake.cpp  flake.hpp  flake_count.hpp  flake_fwd.hpp  object.cpp  object.hpp
src/game_logics/: base.cpp
src/layouter/: pair.hpp  stretch.hpp
src/log/: object.cpp  object.hpp
src/objects/: base.cpp  sprite_block.hpp  weak_ptr.hpp
src/parser/: parse_file.hpp  parse_stream.cpp  stone_sequence.hpp  stone_template.hpp
src/sprite/: choices.hpp  dim.hpp  object.hpp  parameters.hpp  rotation_type.hpp  scalar.hpp  system.hpp  vector.hpp
src/states/: running.hpp
states/: running.cpp  running.hpp  running_fwd.hpp
test/: explode_test.cpp  main.cpp
util/: generate_headers  update_cmake.sh
